<resources>
    <string name="app_name">CitaSalud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_inicio">CitaSalud</string>
    <string name="title_citas">Citas</string>
    <string name="title_chat">Chat</string>
    <string name="title_perfil">Perfil</string>

    <string name="title_detalle_cita">Detalles de la cita</string>
    <string name="title_editar_ubicacion_cita">Editar ubicación</string>
    <string name="title_cancelar_cita">Cancelar cita</string>
    <string name="title_reprogramar_cita">Reprogramar cita</string>

    <string name="img_empty_state">Sin chats</string>
</resources>