<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard"/>-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications"/>-->

    <item
        android:id="@+id/navigation_citas"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_citas"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/title_chat"/>

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil"
        android:title="@string/title_perfil"/>
</menu>