<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.robles_farma.ui.home.HomeFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_citas"
        android:name="com.example.robles_farma.ui.citas.CitasFragment"
        android:label="@string/title_citas"
        tools:layout="@layout/fragment_citas" >
        <action
            android:id="@+id/action_navigation_citas_to_navigation_detalle_cita"
            app:destination="@id/navigation_detalle_cita" />

        <action
            android:id="@+id/action_navigation_citas_to_navigation_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.robles_farma.ui.chat.ChatsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.robles_farma.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_navigation_perfil_to_editarPerfilFragment"
            app:destination="@id/navigation_editar_perfil" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editar_perfil"
        android:name="com.example.robles_farma.EditarPerfilFragment"
        android:label="fragment_editar_perfil"
        tools:layout="@layout/fragment_editar_perfil" />

    <fragment
        android:id="@+id/navigation_detalle_cita"
        android:name="com.example.robles_farma.ui.citas.DetalleCitaFragment"
        android:label="@string/title_detalle_cita"
        tools:layout="@layout/fragment_detalle_cita" />

</navigation>